--- a/css/contact.css
+++ b/css/contact.css
@@ -1,36 +1,51 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
+
 body{
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    
     min-height: 100vh;
-    background: url('../img/download.jpg') no-repeat;
+    background: url('../img/header/download.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
+ 
+/* justify-content: center;
+    align-items: center;
+    text-align: center; */
+
+
 .wrapper{
-    width:48%;
+    width: 70%;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     /* làm mờ */
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .9);
-    color: #000000;
+    color: #fff;
     border-radius: 10px;
-    padding: 15px 20px;
-    margin: 10px;
+    padding: 30px 40px;
+
+    position: absolute;
+    top: 15%;
+    left: 15%;
+    right: auto;
 }
 
 .wrapper h1{
     font-size: 36px;
     text-align: center;
 }
-
+/* input-box-Message */
 .wrapper .input-box{
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 30px 0;
+    margin: 3px 0 10px 0;
 }
-
+.wrapper .Message{
+    height: 20vh;
+}
 .input-box input{
     width: 100%;
     height: 100%;
@@ -92,9 +107,13 @@ body{
 }
 
 .wrapper .register-link{
-    font-size: 14.5px;
+    font-size: 15px;
     text-align: center;
-    margin: 20px 0 15px;
+}
+
+.wrapper .register-link span{
+    font-size: 30px;
+    text-align: center;
 }
 
 .register-link p a{
