--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,71 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 /* .all-content{
     background-color:rgb(0, 0, 0);
 } */
 
 
 /* navbar */
-#navbar{
+#navbar {
     position: fixed;
-    background-color: rgb(0, 0, 0);   
+    background-color: rgb(0, 0, 0);
     /* padding-left:4%; */
     width: 100%;
     font-weight: bold;
     z-index: 1;
 }
-#logo{
+
+#logo {
     font-size: 33px;
     color: rgb(255, 255, 255);
 }
-#logo img{
+
+#logo img {
     margin-bottom: 15px;
 }
-.navbar-nav{
+
+.navbar-nav {
     margin-left: 10px;
 }
-.nav-link{
-    color: rgb(255, 255, 255);
+
+.nav-link {
+    color:
+        #fff !important;
     font-weight: bold;
-    text-shadow: 1px 1px 1px rgb(0, 255, 38);
     margin-left: 15px;
-    transform: 0.5s ease;
+    text-transform: uppercase;
 }
-.nav-link:hover{
+
+/* .nav-link:hover{
     background-color: rgb(253, 253, 253);
     color: rgb(191, 232, 199);
     border-radius: 5px;
-}
-.icons{
+} */
+.icons {
     margin-left: 30px;
 }
-.icons i{
+
+.icons i {
     margin-left: 10px;
     transition: 0.5s ease;
     cursor: pointer;
 }
-.icons i:hover{
+
+.icons i:hover {
     transform: translateY(-5px);
 }
 
-@media screen and (max-width:330px){
-    #logo{
+@media screen and (max-width:330px) {
+    #logo {
         font-size: 15px;
     }
 }
+
 /* navbar end */
 
 
@@ -64,7 +73,7 @@
 
 
 /* home section */
-.home{
+.home {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -76,86 +85,111 @@
     position: relative;
     z-index: 0;
 }
-.home .img{
+
+.home .img {
     flex: 1 1 400px;
 }
 
-.home .img img{
+.home .img img {
     padding: 50px;
     width: 100%;
     height: 100%;
     border-radius: 50px;
     opacity: 0.1;
 }
-.home .content{
+
+.home .content {
     flex: 1 1 400px;
-    margin-left:4%;
+    margin-left: 4%;
 }
-.content h3{
+
+.content h3 {
     color: aliceblue;
     font-size: 60px;
     font-weight: bold;
     text-shadow: 1px 1px 1px black;
 }
-.content h2{
+
+.content h2 {
     font-size: 60px;
     color: aliceblue;
     text-shadow: 2px 2px 2px rgb(255, 174, 224);
     font-weight: bold;
 }
-.changecontent::after{
+
+.changecontent::after {
     content: ' ';
-    color:rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     text-shadow: 3px 3px 3px rgb(255, 255, 255);
     animation: changetext 15s infinite linear;
     font-weight: bold;
 }
-@keyframes changetext{
-    0%{content: "THE_FLAIR";}
-    25%{content: "QUALITY";}
-    50%{content: "PERFECTION";}
-    100%{content: "GOOD SERVICE";}
+
+@keyframes changetext {
+    0% {
+        content: "THE_FLAIR";
+    }
+
+    25% {
+        content: "QUALITY";
+    }
+
+    50% {
+        content: "PERFECTION";
+    }
+
+    100% {
+        content: "GOOD SERVICE";
+    }
 }
-.content p{
+
+.content p {
     color: aliceblue;
     font-weight: bold;
     text-shadow: 1px 1px 1px rgb(0, 0, 0);
-    
+
 }
-.content .btn{
+
+.content .btn {
     width: 110px;
     height: 38px;
     background-color: rgb(255, 198, 238);
     color: rgb(221, 0, 255);
     transition: 1s ease;
 }
-.content .btn:hover{
+
+.content .btn:hover {
     width: 130px;
     height: 38px;
     background-color: rgb(197, 187, 255);
     color: rgb(179, 240, 255);
     transition: 0.5s ease;
 }
-@media screen and (max-width:800px){
-    .content h3{
+
+@media screen and (max-width:800px) {
+    .content h3 {
         font-size: 50px;
     }
 }
-@media screen and (max-width:860px){
-    .home{
+
+@media screen and (max-width:860px) {
+    .home {
         height: 120vh;
     }
 }
-@media screen and (max-width:560px){
-    .home{
+
+@media screen and (max-width:560px) {
+    .home {
         height: 100vh;
     }
 }
-@media screen and (max-width:330px){
-    .content h2{
+
+@media screen and (max-width:330px) {
+    .content h2 {
         font-size: 30px;
     }
-    .content h3{
+
+    .content h3 {
         font-size: 30px;
     }
 }
@@ -167,20 +201,23 @@
 
 
 /* footer */
-#footer{
+#footer {
     width: 100%;
     background-color: aliceblue;
     box-shadow: 0px 0px 5px black;
     margin-top: 100px;
 }
-#footer h1{
+
+#footer h1 {
     color: rgb(0, 0, 0);
     padding-top: 30px;
 }
-#footer p{
+
+#footer p {
     color: rgb(0, 0, 0);
 }
-#footer .icons i{
+
+#footer .icons i {
     background-color: white;
     color: black;
     border-radius: 50px;
@@ -189,24 +226,29 @@
     transition: 0.5s;
     cursor: pointer;
 }
-#footer .icons i:hover{
+
+#footer .icons i:hover {
     background-color: black;
     color: white;
 }
-.copyright{
+
+.copyright {
     color: rgb(0, 0, 0);
     margin-top: 20px;
 }
-.credite{
+
+.credite {
     color: rgb(0, 0, 0);
 }
+
 /* footer end */
 
 
-html{
+html {
     scroll-behavior: smooth;
 }
-.arrow{
+
+.arrow {
     position: fixed;
     background-color: rgba(16, 16, 16, 0.941);
     border-radius: 50px;
@@ -216,19 +258,21 @@ html{
     text-align: center;
     line-height: 30px;
 }
-.arrow i{
+
+.arrow i {
     padding-top: 0;
     transition: 0.5s;
     color: rgb(0, 0, 0);
 }
-.arrow i:hover{
+
+.arrow i:hover {
     margin-top: 10px;
     color: aliceblue;
     font-size: 30px;
 }
 
-@media screen and (max-width:560px){
-    .arrow i{
+@media screen and (max-width:560px) {
+    .arrow i {
         display: none;
     }
 }
@@ -242,7 +286,7 @@ html{
 
 
 /* product cards */
-#product-cards h1{
+#product-cards h1 {
     text-align: center;
     font-weight: bold;
     margin-top: 50px;
@@ -250,13 +294,15 @@ html{
     text-shadow: 1px 1px 1px black;
     border-bottom: 2px solid rgb(156, 255, 212);
 }
-#product-cards .card{
+
+#product-cards .card {
     background-color: rgb(255, 255, 255);
     box-shadow: 0 0 3px black;
     border-radius: 10px;
     cursor: pointer;
 }
-.overlay{
+
+.overlay {
     display: block;
     opacity: 0;
     position: absolute;
@@ -266,46 +312,53 @@ html{
 
     transition: 0.5s ease;
 }
-#product-cards .card:hover .overlay{
+
+#product-cards .card:hover .overlay {
     opacity: 1;
     margin-left: 5%;
     transition: 0.5s ease;
 }
-#product-cards .card img{
+
+#product-cards .card img {
     height: 250px;
     width: 100%;
 
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 
-    
+
 }
-.overlay  .btn-secondary{
+
+.overlay .btn-secondary {
     background: transparent !important;
     border: none;
-    box-shadow: none; 
+    box-shadow: none;
 }
-#product-cards h3{
+
+#product-cards h3 {
     color: white;
     text-shadow: 2px 2px 2px black;
 }
 
 /* ******************************************************************************** */
-.star .checked{
+.star .checked {
     color: rgb(255, 253, 156);
 }
-#product-cards p{
+
+#product-cards p {
     color: rgb(0, 0, 0);
     font-weight: bold;
     text-shadow: 2px 2px 2px rgb(185, 185, 185);
 }
-#product-cards h6{
+
+#product-cards h6 {
     font-size: 20px;
     color: rgb(0, 255, 166);
     font-weight: bold;
     text-shadow: 2px 2px 2px rgb(197, 228, 255);
 }
-#product-cards h6 span button{
+
+#product-cards h6 span button {
     width: 100%;
     height: 26px;
     font-size: 15px;
@@ -317,11 +370,13 @@ html{
     transition: 0.5s ease;
     cursor: pointer;
 }
-#product-cards h6 span button:hover{
+
+#product-cards h6 span button:hover {
     background-color: rgb(145, 255, 150);
     color: rgb(255, 255, 255);
     text-shadow: 2px 2px 2px rgb(255, 0, 0);
 }
+
 /* product cards end */
 
 
